# nabla

./: Cargo.toml  README.md
nabla_backend/: Cargo.toml
nabla_backend/src/: error.rs  lib.rs
nabla_cli/: Cargo.toml
nabla_cli/src/: main.rs
nabla_frontend/: Cargo.toml
nabla_frontend/grammar/: nabla_de_facto.peg  nabla_de_jure.peg  nabla_tokens_de_facto.peg  nabla_tokens_de_jure.peg
nabla_frontend/src/: ast.rs  eval.rs  lexer.rs  lib.rs  node.rs  parser.rs  semantics.rs  token.rs
nabla_frontend/src/eval/: value.rs
nabla_frontend/src/lexer/: tests.rs  utility.rs
nabla_frontend/src/parser/: error.rs  tests.rs  utility.rs
nabla_frontend/src/parser/snapshots/: nabla_frontend__parser__tests__comma_after_field.snap  nabla_frontend__parser__tests__def_all_syntax.snap  nabla_frontend__parser__tests__ignore_expr_error.snap  nabla_frontend__parser__tests__ignore_global_error.snap  nabla_frontend__parser__tests__ignore_use_error.snap  nabla_frontend__parser__tests__ignore_use_item_error.snap  nabla_frontend__parser__tests__ignore_use_kind_error.snap  nabla_frontend__parser__tests__use_complex.snap
nabla_frontend/src/semantics/: error.rs  namespace.rs  tests.rs  type_analysis.rs  types.rs  uses.rs  values.rs
nabla_frontend/src/semantics/types/: analysis.rs  assertions.rs
nabla_frontend/src/semantics/values/: value_analysis.rs
nabla_ls/: Cargo.toml
nabla_ls/src/: main.rs
