[package]
name = "nabla_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nabla_frontend = { path = "../nabla_frontend" }
nabla_backend = { path = "../nabla_backend" }
serde_json = "1.0.108"
