[package]
name = "nabla_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
nabla_frontend = { path = "../nabla_frontend" }
nabla_backend = { path = "../nabla_backend" }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
toml = "0.8.8"
xml-builder = "0.5.2"
color-eyre = "0.6.2"
