[package]
name = "nabla_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { version = "1.34.0", features = ["filters", "redactions"] }
nom = "7.1.3"
nom_locate = "4.2.0"
pretty_assertions = "1.4.0"
thiserror = "1.0.50"
